label do usuario

--- a/login/index.html
+++ b/login/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
+    <title>LogIn</title>
  </head>
  <body>
+    <div class="mai-login">
+
+        <div class="left-login">
+            <h1>Log You'r Acount  <br>Come join our team!</h1>
+
+        </div>
+
+        <div class="rigth-login">
+
+            <div class="crd-login">
+
+                <div class="textfilde">
+                    <label for="usuario">Usuario</label>
+                    <input type="text" name="usuario" id="usuario" placeholder="Usuario">
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
     
  </body>
  </html>
