--- a/login/index.html
+++ b/login/index.html
@@ -19,8 +19,13 @@
             <div class="crd-login">
 
                 <div class="textfilde">
-                    <label for="usuario">Usuario</label>
-                    <input type="text" name="usuario" id="usuario" placeholder="Usuario">
+                    <label for="usuario">Username</label>
+                    <input type="text" name="Username" id="username" placeholder="Username">
+                </div>
+
+                <div class="texfilde">
+                    <label for="senha">Password</label>
+                    <input type="password" name="password" id="password" placeholder="Password">
 
                 </div>
             </div>
