--- a/login/index.html
+++ b/login/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
-    <div class="mai-login">
+    <div class="main-login">
 
         <div class="left-login">
             <h1>Log You'r Acount  <br>Come join our team!</h1>
