--- a/login/index.html
+++ b/login/index.html
@@ -17,7 +17,7 @@
 
         <div class="rigth-login">
 
-            <div class="crd-login">
+            <div class="card-login">
 
                 <h1>LogIn</h1>
 
