--- a/login/index.html
+++ b/login/index.html
@@ -12,6 +12,7 @@
 
         <div class="left-login">
             <h1>Log You'r Acount  <br>Come join our team!</h1>
+            <img src="img/fingerprint-animate.svg" alt="LogIn" class="left-login-img">
 
         </div>
 
