--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LogIn</title>
-    <link rel="stylesheet" href="../login/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
  </head>
  <body>
     <div class="main-login">
 
         <div class="left-login">
             <h1>Log You'r Acount  <br>Come join our team!</h1>
-            <img src="../login/img/fingerprint-animate.svg" alt="LogIn" class="left-login-img">
+            <img src="img/fingerprint-animate.svg" alt="LogIn" class="left-login-img">
 
         </div>
         <div class="rigth-login">
